更新fastjson依赖库; 少量改进并发布Gen; 修正大量警告; 改进少量写法