@@ -143,7 +143,7 @@ public class LogList1<V> extends LogList<V> {
 
 	public final void merge(LogList1<V> from) {
 		if (!from.opLogs.isEmpty()) {
-			if (from.opLogs.get(0).op == OpLog.OP_CLEAR)
+			if (from.opLogs.getFirst().op == OpLog.OP_CLEAR)
 				opLogs.clear();
 			opLogs.addAll(from.opLogs);
 		}
