@@ -104,6 +104,7 @@ public class CommandConsole {
 			try {
 				words = parseWords(line);
 			} catch (IllegalStateException ex) { // unclosed quote
+				//noinspection ConstantValue
 				if (sender != null)
 					sender.Send("error command format: " + line + "\r\n");
 				continue;
@@ -111,15 +112,17 @@ public class CommandConsole {
 
 			// run command
 			if (!words.isEmpty()) {
-				var cmd = commands.get(words.get(0));
+				var cmd = commands.get(words.getFirst());
 				if (cmd == null) {
+					//noinspection ConstantValue
 					if (sender != null) // sender 可为 null（如类内 main 以 cc.input(null, ...) 驱动）
-						sender.Send("unknown command: " + words.get(0) + "\r\n");
+						sender.Send("unknown command: " + words.getFirst() + "\r\n");
 					continue;
 				}
 				try {
 					cmd.run(sender, words.subList(1, words.size()));
 				} catch (Throwable ex) { // print stacktrace.
+					//noinspection ConstantValue
 					if (sender != null) { // 同上：与上面的判空保持一致
 						sender.Send(Str.stacktrace(ex));
 						sender.Send("\r\n" + line + "\r\n");
